--- a/tech/Makefile
+++ b/tech/Makefile
@@ -9,7 +9,7 @@ LIBS =
 LDFLAGS = 
 INSTALL = /bin/install -c
 
-QFLOW_LIB_DIR = /usr/local/share/qflow
+QFLOW_LIB_DIR = /home/tim/cad/lib/qflow
 
 TECH_DIRS = osu035 osu050
 
